<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OfCampus</string>
    <string name="build_vers_">Build version 1.0.1</string>

    <!-- DataBase Name And Version -->
    <string name="DataBaseName_Version">1</string>
    <string name="DataBaseName">OfCampus</string>

    <!-- Seek Bar -->
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>

    <!-- DataBase Name And Version End -->

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="internetconnection_msg">Please check your internet connection.</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>

    <!-- Share Text -->
    <string name="share_subject">Android App.</string>
    <string name="share_content">Android App for job.</string>

    <!-- Menu Search -->
    <string name="Search">Search</string>
    <string name="Filter">Filter</string>

    <!-- Login Screen -->
    <string name="login_scr_logo_">Of Campus</string>
    <!--
         <string name="login_scr_hint_email">Enter email address</string>
    <string name="login_scr_hint_Pass">Enter password</string>
    -->

    <string name="login_scr_hint_email">xyz@collegename.edu</string>
    <string name="login_scr_hint_Pass">Enter password</string>
    <string name="login_scr_btn_login">Login</string>
    <string name="login_scr_btn_gpllogin">Sign in with Google+</string>
    <string name="login_scr_txt_signup">Create an account</string>
    <string name="login_or_txt">OR</string>
    <string name="login_scr_txt_forgotpass">Forgot password</string>
    <string name="login_scr_email_msg">Enter an email address</string>
    <string name="login_scr_error_email_msg">Enter a valid email address</string>
    <string name="login_scr_edtpass_msg">Enter a password</string>
    <string name="login_scr_parse_success">Successfully login</string>
    <string name="login_scr_parse_error">Login error</string>

    <!-- Registration Screen -->
    <string name="registration_txt_hint_firstname">First Name</string>
    <string name="registration_txt_hint_lasttname">Last Name</string>
    <string name="registration_txt_hint_accname">Account Name</string>
    <string name="registration_txt_hint_email">Email Address</string>
    <string name="registration_txt_hint_password">Password</string>
    <string name="registration_txt_hint_repassword">Confirm Password</string>
    <string name="registration_txt_hint_signup">Sign up</string>
    <string name="registration_txt_hint_submit">Submit</string>
    <string name="login_scr_verifycode_msg">Enter Verify Code.</string>
    <string name="registration_txt_hint_resend">Resend Token</string>

    <!-- error message -->
    <string name="registration_txt_error_firstname">Enter first name.</string>
    <string name="registration_txt_error_lasttname">Enter last name.</string>
    <string name="registration_txt_error_accname">Enter account name.</string>
    <string name="registration_txt_error_email">Enter email address.</string>
    <string name="registration_txt_error_password">Enter password.</string>
    <string name="registration_txt_error_repassword">Enter confirm password.</string>
    <string name="registration_txt_error_notmatched">Confirm password and password not matched.</string>

    <!-- Institute List Screen -->
    <string name="Institute_list_choose">Choose your Institute</string>

    <!-- Job List View -->
    <string name="Job_List_View_reply">Reply</string>
    <string name="Job_List_View_share">Share</string>
    <string name="Job_List_View_comment">Comment</string>
    <string name="Job_List_loadmore_comment">load previous comment</string>
    <string name="Job_List_loadmore_commentss">load comments..</string>

    <!-- Craete Jobs -->
    <string name="craetejob_txt_industry">Industry</string>
    <string name="craetejob_txt_Role">Role</string>
    <string name="craetejob_txt_experience">Experience</string>
    <string name="craetejob_txt_sal_range">Salary Range</string>
    <string name="craetejob_txt_location">Location</string>
    <string name="craetejob_txt_jobheadline">Job Headline</string>
    <string name="craetejob_txt_jobdetails">Job Details</string>
    <string name="craetejob_txt_Reply_via">Reply via</string>
    <string name="craetejob_txt_Email">Email</string>
    <string name="craetejob_txt_PhoneNo">Phone No.</string>
    <string name="craetejob_txt_Whatsapp">Whatsapp</string>
    <string name="craetejob_txt_Upload">Upload JD</string>

    <!-- MyProfile -->
    <string name="MyProfile_txt_CurrentEmployer">Current Employer</string>
    <string name="MyProfile_txt_PreviousEmployers">Previous Employers</string>
    <string name="MyProfile_txt_ProfessionalInterests">Professional Interests</string>
    <string name="MyProfile_txt_Interests">Interests</string>

    <!-- Edit MyProfile -->
    <string name="EditProfile_txt_Firstname">First Name</string>
    <string name="EditProfile_txt_lastname">Last Name</string>
    <string name="EditProfile_txt_accname">Account Name</string>
    <string name="EditProfile_txt_yearofg">Year of Graduation</string>

    <!-- MyProfile -->
    <string name="Filter_msg_chooseoption">Choose at least one option for filter.</string>

    <!-- Circle -->
    <string name="enter_circlename_title">Please enter a circle name to create your own circle.</string>
    <string name="enter_circlename">Name of circle</string>
    <string name="enter_msg_circlename">Please enter Circle Name.</string>
    <string name="createcircle_txtmodarator">Public</string>
    <string name="create_circlebtn">Create Circle</string>
    <string name="join_circle_normal_btn">Join</string>

    <!-- Reset Password -->

    <string name="resetpassword_Submit">Submit</string>
    <string name="resetpassword_enterpassword">Enter Password</string>
    <string name="resetpassword_retypepassword">Retype Password</string>
    <string name="resetpassword_validation">Password and Retype Password not same.</string>
    
    <!-- Circle Profile -->
    <string name="profile_posts">Posts</string>
    <string name="profile_members">Members</string>

</resources>