<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_color"
    android:fadingEdge="none"
    android:orientation="vertical"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/registration_rel_profile_pic"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/registration_scn_image_bghit" >

            <ImageView
                android:id="@+id/registration_img_profile_pic"
                android:layout_width="@dimen/registration_scn_image_hight"
                android:layout_height="@dimen/registration_scn_image_hight"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@android:drawable/picture_frame" />
        </RelativeLayout>

        <EditText
            android:id="@+id/registration_edt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_rel_profile_pic"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/editbox_rect"
            android:drawableLeft="@drawable/last_name_icon"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/registration_txt_hint_firstname"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/theme_color" />

        <EditText
            android:id="@+id/registration_edt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_edt_firstname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/editbox_rect"
            android:drawableLeft="@drawable/last_name_icon"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/registration_txt_hint_lasttname"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/theme_color" />

        <EditText
            android:id="@+id/registration_edt_accname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_edt_lastname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/editbox_rect"
            android:drawableLeft="@drawable/last_name_icon"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/registration_txt_hint_accname"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/theme_color" />

        <EditText
            android:id="@+id/registration_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_edt_accname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/editbox_rect"
            android:drawableLeft="@drawable/email_reg_icon"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/registration_txt_hint_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/theme_color" />

        <EditText
            android:id="@+id/registration_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_edt_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/editbox_rect"
            android:drawableLeft="@drawable/confirm_password_icon"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/registration_txt_hint_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/theme_color" />

        <EditText
            android:id="@+id/registration_edt_conpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_edt_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/editbox_rect"
            android:drawableLeft="@drawable/confirm_password_icon"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/registration_txt_hint_repassword"
            android:inputType="textPassword"
            android:padding="6dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/theme_color" />

        <RelativeLayout
            android:id="@+id/registration_rel_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_edt_conpassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/registration_rd_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/radiobtn"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="Male"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/registration_rd_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/registration_rd_male"
                android:drawableLeft="@drawable/radiobtn"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="Female"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/registration_btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_rel_gender"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_rec"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/registration_txt_hint_signup"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/theme_color" />

        <RelativeLayout
            android:id="@+id/registration_rel_bottomlaout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/registration_btn_registration" >
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>