<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ofcampus="http://schemas.android.com/apk/res/com.ofcampus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/joblist_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/actiontool_bar" >
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4" >

                <com.ofcampus.ui.CustomEditText
                    android:id="@+id/fragm_createcircle_edt_verifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/joblist_row_rect"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_circlename"
                    android:inputType="text"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/theme_color"
                    ofcampus:fontName="Helvetica.otf" />

                <com.ofcampus.ui.CustomTextView
                    android:id="@+id/fragm_createcircle_txtmodarator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/fragm_createcircle_edt_verifyCode"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/checkbox_selection"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/createcircle_txtmodarator"
                    android:textColor="@color/theme_color"
                    android:textSize="18sp"
                    ofcampus:fontName="Helvetica.otf" />

                <com.ofcampus.ui.CustomTextView
                    android:id="@+id/fragm_createcircle_btn_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragm_createcircle_txtmodarator"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_rec"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/create_circlebtn"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    ofcampus:fontName="Helvetica.otf" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>