<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inflate_joblistview_rel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@android:color/transparent"
    android:visibility="visible" >

    <RelativeLayout
        android:id="@+id/joblistview_relpicname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <com.ofcampus.component.CircleImageView
            android:id="@+id/joblistview_img_pic"
            android:layout_width="@dimen/joblitview_picwd"
            android:layout_height="@dimen/joblitview_picwd"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_profilepic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/joblistview_img_imp"
            android:layout_toRightOf="@+id/joblistview_img_pic" >

            <TextView
                android:id="@+id/joblistview_txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/Comment_username" />

            <TextView
                android:id="@+id/joblistview_txt_postdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/joblistview_txt_name"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/theme_color"
                android:textSize="@dimen/Comment_postdate" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/joblistview_img_imp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/joblistview_img_arrow"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/important_selector"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/joblistview_img_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_downarrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/proxyview_txt_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/joblistview_relpicname"
        android:layout_marginTop="5dp"
        android:maxLines="2"
        android:text=""
        android:textColor="@color/theme_color"
        android:textSize="@dimen/Comment_Header"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/proxyview_txt_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proxyview_txt_subject"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:maxLines="4"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="@dimen/Comment_Comment"
        android:visibility="invisible" />

    <android.support.v4.view.ViewPager
        android:id="@+id/jobdetails_album_pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_pager_hight"
        android:layout_below="@+id/proxyview_txt_contain"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/joblistview_linear_buttonsection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jobdetails_album_pager"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/joblist_button_rect" >

            <TextView
                android:id="@+id/joblistview_txt_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/ic_reply"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/Job_List_View_reply"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/joblitview_postdate" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/layerlist" >

            <TextView
                android:id="@+id/joblistview_txt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/ic_share"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/Job_List_View_share"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/joblitview_postdate" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/joblist_button_rect" >

            <TextView
                android:id="@+id/joblistview_txt_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/ic_comment"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/Job_List_View_comment"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/joblitview_postdate" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/joblistview_linear_buttonsection" >

        <RelativeLayout
            android:id="@+id/rel_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" >

            <com.ofcampus.custprogressbar.ProgressBarCircularIndeterminate
                android:id="@+id/reloaddata"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="3dp"
                android:background="#1E88E5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/reloaddata"
                android:text="@string/Job_List_loadmore_commentss"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/joblitview_name"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/joblistview_txt_loadAllComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_loadall"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/Job_List_loadmore_comment"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/joblitview_name"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>